--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "formik": "^2.2.6",
         "graphql": "^15.5.0",
         "keycloak-js": "^11.0.2",
-        "next": "latest",
+        "next": "^11.0.1",
         "prop-types": "latest",
         "react": "latest",
         "react-dom": "latest",
