--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "clsx": "latest",
         "cookie": "^0.4.1",
         "date-fns": "latest",
+        "docx": "^6.0.3",
+        "file-saver": "^2.0.5",
         "formik": "^2.2.6",
         "graphql": "^15.5.0",
         "keycloak-js": "^11.0.2",
@@ -29,15 +31,25 @@
         "dev": "next",
         "build": "next build",
         "start": "next start",
-        "lint": "eslint . --ext .js,.ts,.tsx"
+        "lint": "eslint . --ext .js,.ts,.tsx",
+        "test": "jest --env=jsdom",
+        "test:coverage": "jest --env=jsdom --coverage",
+        "test:watch": "jest --env=jsdom --watch"
     },
     "devDependencies": {
         "@types/apollo-upload-client": "^14.1.0",
+        "@testing-library/dom": "^8.1.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.0.0",
+        "@testing-library/user-event": "^13.1.9",
         "@types/cookie": "^0.4.0",
+        "@types/jest": "^26.0.24",
+        "@types/file-saver": "^2.0.3",
         "@types/node": "^15.0.1",
         "@types/react": "^17.0.4",
         "@typescript-eslint/eslint-plugin": "^4.22.1",
         "@typescript-eslint/parser": "^4.22.1",
+        "babel-jest": "^27.0.6",
         "eslint": "^7.25.0",
         "eslint-config-airbnb-typescript": "^12.3.1",
         "eslint-config-next": "^11.0.1",
@@ -45,6 +57,10 @@
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "jest": "^27.0.6",
+        "jest-transform-graphql": "^2.1.0",
+        "ts-jest": "^27.0.3",
+        "ts-node": "^10.0.0",
         "typescript": "^4.2.4"
     }
 }
